--- a/lec5/slide-05-01.tex
+++ b/lec5/slide-05-01.tex
@@ -101,10 +101,13 @@
 				
 				\end{itemize}
 			\end{itemize}
+			\tiny A Critique of the Windows	Application Programming Interface, Computer Standards \& Interfaces, 20:1–8, November 1998.
 		\end{column}
 		
 		
 	\end{columns}
+
+	
 	
 	
 \end{frame}
@@ -138,6 +141,13 @@
 	\begin{center}
 		\Huge 
 		API design is the big problem				
+		\pause
+		\normalsize
+		\begin{itemize}
+			\item Bugs
+			\item Performance
+			\item Many apps will be affected
+		\end{itemize}
 		
 	\end{center}
 	
@@ -170,7 +180,7 @@
 		
 	\end{itemize}
 	
-	\item (Usually) can’t be fixed
+	\item (Usually) can't be fixed
 	\begin{itemize}
 		\item Fix == ABI change
 		\item User-space will break
@@ -214,14 +224,14 @@
 				
 				\item Graphical elements: bitmaps, fonts, drawing primitives, and 3D graphics rendering, etc.
 				
-				\item the Microsoft‘s Component Object Model (COM ), OLE, ActiveX,
+				\item the Microsoft's Component Object Model (COM ), OLE, ActiveX,
 				
 				\item game applications (DirectX 2), etc.
 				
 				
 			\end{itemize}
 			
-			
+			\tiny A Critique of the Windows	Application Programming Interface, Computer Standards \& Interfaces, 20:1–8, November 1998.
 		\end{column}
 		
 		
@@ -359,11 +369,11 @@
 			\end{itemize}
 		
 		EVEV MORE
-		\newline \newline
-		Namespace Pollution in the Interface of Win32
-		\newline \newline
-		The functionality of win32 is in a number of cases inconsistent, inadequately documented, or incomplete.  e.g. the spec of 1130 errors.
+		\begin{itemize}
+		\item Namespace Pollution in the Interface of Win32
 		
+		\item The functionality of win32 is in a number of cases inconsistent, inadequately documented, or incomplete.  e.g. the spec of 1130 errors.
+		\end{itemize}
 		\end{column}		
 	\end{columns}
 	
