--- a/lec5/slide-05-03.tex
+++ b/lec5/slide-05-03.tex
@@ -70,7 +70,7 @@
 			\end{itemize}
 			
 			\tiny POSIX Abstractions in Modern Operating
-			Systems: The Old, the New, and the Missing, Vaggelis Atlidakis, etc., EuroSYs, 2016
+			Systems: The Old, the New, and the Missing, Vaggelis Atlidakis, etc., EuroSys, 2016
 			\\
 			https://columbia.github.io/libtrack/
 		\end{column}
@@ -161,9 +161,20 @@
 %----------------------------------------------
 \begin{frame}[plain]	
 	\frametitle{Study Questions}
-	\Large
-	\textbf{Q3: Is POSIX missing any functionality?}
+	\large
 	
+	
+		\begin{columns}
+		
+		\begin{column}{.4\textwidth}
+	
+		\centering
+	\includegraphics[width=1.\textwidth]{ipc-perf}
+	\end{column}
+
+	\begin{column}{.6\textwidth}
+	
+	\textbf{Q3: Is POSIX missing any functionality?}
 	\begin{itemize}\normalsize
 		\item POSIX omits graphics abstractions
 		
@@ -175,9 +186,10 @@
 		\item GUI apps require low-latency UI threads
 		
 	\end{itemize}
-	\centering
-	\includegraphics[width=.35\textwidth]{ipc-perf}
-	
+\end{column}
+\end{columns}
+
+
 \end{frame}
 
 
