--- a/lec5/slide-05-02.tex
+++ b/lec5/slide-05-02.tex
@@ -36,7 +36,7 @@
 %%------------------------------------------------
 %-------------------------------------------------
 \begin{frame}[plain]
-	\frametitle{Introduction}
+	\frametitle{Introduction -- History}
 	
 	
 	
@@ -91,7 +91,7 @@
 
 %-------------------------------------------------
 \begin{frame}[plain]
-	\frametitle{Introduction}
+	\frametitle{Introduction -- History}
 	
 	
 	
@@ -117,7 +117,7 @@
 
 %-------------------------------------------------
 \begin{frame}[plain]
-	\frametitle{Introduction}
+	\frametitle{Introduction -- History}
 	
 	
 	
