--- a/lec6/slide-06-01.tex
+++ b/lec6/slide-06-01.tex
@@ -613,7 +613,7 @@ TIOBE Index for August 2019
 
 	\begin{itemize}
 		
-		\item Is it time to rewrite the operating system in Rust? Bryan Cantrill
+		\item Is it time to rewrite the operating system in Rust? Bryan Cantrill, tech talk, 2018
 		
 		
 		
