--- a/lec6/slide-06-01.tex
+++ b/lec6/slide-06-01.tex
@@ -43,9 +43,11 @@
 	\begin{columns}
 		
 		\begin{column}{.3\textwidth}
-			
+			\centering
+			Current
 			\includegraphics[width=1.\textwidth]{os-position}
-			
+			Future
+			\includegraphics[width=1.\textwidth]{perv-computing}
 		\end{column}
 		
 		\begin{column}{.7\textwidth}
@@ -57,7 +59,8 @@
 				\item Is C  the best language for OS?
 				\item Which parts of language affect OS deeply?
 				\item Other than languages, Which components affect the development of OS? 
-				\item Why do we need/needn't to change the language for OS?				
+				\item Why do we need/needn't to change the language for OS?	
+				\item Other Langs(such as Rust, Go, etc.) based OS will be the future?			
 			\end{itemize}
 			
 		\end{column}
@@ -77,8 +80,11 @@
 	\begin{columns}
 		
 		\begin{column}{.4\textwidth}
-			
-			\includegraphics[width=1.\textwidth]{os-position}
+			\centering
+			Current
+\includegraphics[width=1.\textwidth]{os-position}
+Future
+\includegraphics[width=.9\textwidth]{perv-computing}
 			
 		\end{column}
 		
@@ -108,8 +114,11 @@
 	\begin{columns}
 		
 		\begin{column}{.4\textwidth}
-			
-			\includegraphics[width=1.\textwidth]{os-position}
+			\centering
+			Current
+\includegraphics[width=1.\textwidth]{os-position}
+Future
+\includegraphics[width=.9\textwidth]{perv-computing}
 			
 		\end{column}
 		
@@ -268,7 +277,7 @@ TIOBE Index for August 2019
 	\centering
 	Some OS based on Non-C language
 	\includegraphics[width=.9\textwidth]{biscuit-tock-os}
-把\end{frame}
+\end{frame}
 
 
 %-------------------------------------------------
@@ -291,7 +300,7 @@ TIOBE Index for August 2019
 		
 		\begin{itemize}
 			\item The MCP (Master Control Program), the first OS written exclusively in a high-level language (HLL), is the proprietary operating system of the Burroughs small, medium and large systems.
-			\item MCP provides virtual memory, file system with hierarchical directory structures, processes are called "Jobs" and "Tasks.", software components and libraries.
+			\item MCP provides virtual memory, file system with hierarchical directory structures, processes are called "Jobs" and "Tasks", software components and libraries.
 			
 			\item  Originally written in 1961 in ESPOL (Executive Systems Programming Language), which itself was an extension of Burroughs Extended ALGOL,
 		\end{itemize}
@@ -399,7 +408,7 @@ TIOBE Index for August 2019
 
 %-------------------------------------------------
 \begin{frame}[plain]
-	\frametitle{History -- NUIX \& C}
+	\frametitle{History -- UNIX \& C}
 	
 	The birth of Unix
 	\begin{itemize}
@@ -603,7 +612,7 @@ TIOBE Index for August 2019
 	\end{itemize}
 	\LARGE
 	C based OS will dominate the development of OS?  \\
-	Rust based OS will be the future?
+	Other Langs(such as Rust, Go, etc.) based OS will be the future?
 \end{frame}
 %-------------------------------------------------
 
