--- a/lec6/slide-06-02.tex
+++ b/lec6/slide-06-02.tex
@@ -91,43 +91,6 @@ A Study of the Unix Operating System 1973–2015}
 		\begin{column}{.7\textwidth}
 			
 			\Large
-			Why was C be used to develop UNIX? \\
-			C was a traditional procedural family language
-			\normalsize
-			\begin{itemize}
-				\item  SPEED CLOSE TO ASSEMBLY
-				\item  'CLOSE TO MACHINE' ABSTRACTION
-				\item  TYPE SAFETY
-				\item  PORTABILITY
-				\item  SIMPLE/SMALL LANG \& BIG LIBRARY
-				\item  the relationship between arrays and pointers
-			\end{itemize}
-			
-		\end{column}
-		
-		
-	\end{columns}
-	
-	
-\end{frame}
-
-%-------------------------------------------------
-\begin{frame}[plain]
-	\frametitle{Introduction}
-	
-	
-	
-	\begin{columns}
-		
-		\begin{column}{.3\textwidth}
-			
-			\includegraphics[width=1.\textwidth]{clang}
-			\includegraphics[width=1.\textwidth]{c-unix-authors}
-		\end{column}
-		
-		\begin{column}{.7\textwidth}
-			
-			\Large
 			Why was C be used to develop UNIX?
 			\normalsize
 			\begin{itemize}
@@ -291,11 +254,9 @@ A Study of the Unix Operating System 1973–2015}
 				\item  Programmers trust the compiler for register
 				allocation
 				
-				\item Code formatting practices converge to a com-
-				mon standard
+				\item Code formatting practices converge to a common standard
 				
-				\item  Software complexity evolution follows self cor-
-				rection feedback mechanisms
+				\item  Software complexity evolution follows self correction feedback mechanisms
 				
 				\item Code readability increases
 				
@@ -318,6 +279,30 @@ A Study of the Unix Operating System 1973–2015}
 	
 \end{frame}	
 
+
+%-------------------------------------------------
+\begin{frame}[plain]
+	\frametitle{A Study of the Unix Operating System 1973–2015}
+	
+	
+	
+	\begin{columns}
+		
+		\begin{column}{.5\textwidth}
+			\includegraphics[width=1.\textwidth]{c-unix-analysis}
+		\end{column}
+		
+		\begin{column}{.5\textwidth}
+			
+			\includegraphics[width=1.\textwidth]{unix-line-of-code}
+			
+		\end{column}
+%		http://www.tom-yam.or.jp/2238/src/  unix v6 9000~10000 lines of code
+		
+	\end{columns}
+	
+	
+\end{frame}
 
 %-------------------------------------------------
 \begin{frame}[plain]
