--- a/lec6/slide-06-04.tex
+++ b/lec6/slide-06-04.tex
@@ -128,8 +128,9 @@
 		\item None measure HLL impact in a monolithic POSIX kernel
 		\item Build new HLL kernel, compare with Linux
 		\item  Isolate HLL impact:
+		\begin{itemize}
 		\item Same apps, POSIX interface, and monolithic organization
-		
+		\end{itemize}
 	\end{itemize}
 	
 	
@@ -256,7 +257,7 @@
 		\begin{column}{.6\textwidth}
 			\includegraphics[width=.8\textwidth]{biscuit-heap}
 			\begin{itemize}
-				\item Can’t allocate heap memory =⇒ nothing works
+				\item Can’t allocate heap memory ==> nothing works
 				\item All kernels face this problem
 
 			\end{itemize}
@@ -391,9 +392,9 @@
 		\begin{column}{.6\textwidth}
 		Eval: Should we use high-level languages to build OS kernels?
 			\begin{itemize}
-				\item Did B ISCUIT benefit from HLL features?
+				\item Did BISCUIT benefit from HLL features?
 				
-				\item  Is B ISCUIT performance in the same league as Linux?
+				\item  Is BISCUIT performance in the same league as Linux?
 				
 				\item What is the breakdown of HLL tax?
 				
