--- a/lec11/slide-11-01.tex
+++ b/lec11/slide-11-01.tex
@@ -16,6 +16,7 @@
 \date{\today} % Date, can be changed to a custom date
 
 
+
 \begin{document}
 
 \begin{frame}
@@ -65,6 +66,11 @@
 		
 	\end{columns}
 	
+\tiny ref:
+Some info are from
+
+Paul McKenney (IBM) Tom Hart (University of Toronto), Frans Kaashoek (MIT), 
+Daniel J. Sorin "A Primer on Memory Consistency and Cache Coherence", Fabian Giesen "Cache coherency primer", Mingyu Gao(Tsinghua),Yubin Xia(SJTU)
 	
 \end{frame}
 
@@ -160,7 +166,7 @@
 	\Large \centering
 	What is scalability? 
 	\begin{itemize}
-		\item Amdahl’s law
+		\item Amdahl's law
 	\end{itemize}
 	
 	\begin{columns}
