--- a/preamble.tex
+++ b/preamble.tex
@@ -88,6 +88,7 @@
 \graphicspath{{./figs/}}
 \usepackage{booktabs} % Allows the use of \toprule, \midrule and \bottomrule in tables
 \usepackage{longtable}
+\usepackage{minted}
 \usepackage{listings}
 \usepackage{xcolor}
 \lstset{numbers=left, %设置行号位置
